# simianpy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst  modules.rst  simianpy.analysis.rst  simianpy.cli.rst  simianpy.io.intan.intanutil.rst  simianpy.io.intan.rst  simianpy.io.monkeylogic.rst  simianpy.io.nex.rst  simianpy.io.openephys.rst  simianpy.io.rst  simianpy.misc.logging.rst  simianpy.misc.rst  simianpy.rst  simianpy.signal.rst
simianpy/: __init__.py  _version.py
simianpy/analysis/: ROC.py  __init__.py  behaviouraldata.py  blink_mask.py  csd.py  detectfixations.py  detectsaccades.py  detectspikes.py  eye_classify.py  gaussian_kde_2d.py  linear_regression.py  psth.py  spectrogram.py  spikedensity.py  spiketrain.py
simianpy/analysis/bursting/: poisson_burst_detection.py
simianpy/analysis/gaze/: __init__.py  gazedata.py  trialgazedata.py
simianpy/analysis/lfp/: __init__.py  compute_csd.py  decomposition.py  multitaper_lfp_power.py  (+1 more)
simianpy/io/: File.py  __init__.py  convert.py
simianpy/misc/: __init__.py  binary_digitize.py  consecutive_true.py  cut.py  electrode_mapping.py  pairwise_difference.py  parse_timeslice.py  tree.py  units.py
simianpy/plotting/: __init__.py  bar.py  catplot.py  contour.py  gaussian_kde_2d_plot.py  heatmap.py  histogram.py  imshow.py  jpsth.py  regression.py  scatter.py  scrolling_viewer.py  spike.py  util.py
simianpy/scripts/: __init__.py  __main__.py
simianpy/signal/: __init__.py  convolve.py  fft.py  filter.py  smooth.py  sosfilter.py
tests/: test_cpd.py  test_cwt.py
(+80 files in other folders)
