[project]
name = "simianpy"
dynamic = ["version"]
description = "Data analysis tools designed for working with primate neuroscientific data"
author = "Janahan Selvanayagam"
authors = [
    { name = "Janahan Selvanayagam", email = "me@janahan.ca" },
]
keywords = ["electrophysiology", "behaviour", "signal processing"]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "xarray",
    "matplotlib",
    "pyyaml",
    "h5py",
    "tables",
    "tqdm",
    "click",
    "formulaic>=1.2.1",
]

[project.optional-dependencies]
FULL = [
    "dask[array]",
    "ssqueezepy>=0.6.6",
]


[project.scripts]
simi = "simianpy.scripts:simi"

[tool.uv.sources]
pyqtmgl = {git = "https://github.com/jselvan/pyqtmgl.git"}

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "simianpy/_version.py"
template = '''
version = __version__ = _version = "{version}"
'''

[tool.uv-dynamic-versioning]
vcs = "git"
pattern= "default-unprefixed"
bump = true
